logs/watchdog_20251011_1915.log
[11/10/2025 19:15:01,69] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[11/10/2025 19:15:01,98] END WATCHDOG 
